--- a/Franzis/CopyOfhausaufgabe03a.Rmd
+++ b/Franzis/CopyOfhausaufgabe03a.Rmd
@@ -1,6 +1,6 @@
 % Hausaufgabe 03
-% Isabelle Franz <phillip.alday@staff.uni-marburg.de>
-% 2014-04-23
+% Isabelle Franz <Franzis@students.uni-marburg.de>
+% 2014-04-25
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
