--- a/Schwarzs/hausaufgabe03a.Rmd
+++ b/Schwarzs/hausaufgabe03a.Rmd
@@ -1,5 +1,5 @@
 % Hausaufgabe 03
-% Phillip Alday <phillip.alday@staff.uni-marburg.de>
+% Corinna Schwarz <co-schwarz@web.de>
 % 2014-04-23
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
