Franzis_Ha_01a_Liste

--- a/Franzis/CopyOfhausaufgabe03a.Rmd
+++ b/Franzis/CopyOfhausaufgabe03a.Rmd
@@ -26,7 +26,8 @@ Der Index bzw. das Staging Area ist ein vorläufiger Commit, an dem Sie gerade a
 # Ein bisschen Markdown
 Es gibt in RStudio und im Internet **viel** zu Markdown. RStudio nutzt einen besonderen Dialekt, damit auch R-Code-Blöcke eingebaut werden können, aber der Großteil der "Syntax" ändert sich nicht. Fügen Sie hier eine ungeordnete Liste hier mit zumindest zwei Erwartungen von diesem Kurs ein. Testen Sie, dass Sie das korrekt formatiert haben, indem Sie auf "Knit HTML" klicken und schauen, dass die Liste mit Punkten erscheint.  
 
-list_hier
+- relevante statistische Verfahren verstehen
+- Verfahren in R anwenden können 
 
 ## R-Code-Blöcke
 ```{r}
