--- a/SteinesM/hausaufgabe03a.Rmd
+++ b/SteinesM/hausaufgabe03a.Rmd
@@ -1,6 +1,6 @@
 % Hausaufgabe 03
-% Phillip Alday <phillip.alday@staff.uni-marburg.de>
-% 2014-04-23
+% Miriam Steines <Steines@students.uni-marburg.de>
+% 2014-04-25
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
@@ -78,4 +78,4 @@ Die Summe von 98545455678767 und 567886538546532323 ist: code_hier .
 Es ist natürlich auch möglich R-Code zu schreiben, ohne ihn in (R)Markdown einzubetten. Dazu geht die Aufgabe weiter mit `hausaufgabe03b.R` weiter. Sie sollten die Datei auch in Ihren Ordner kopieren und einen Commit machen, bevor Sie die Kopie weiter anpassen.
 
 # Lizenz
-Dieses Werk ist lizenziert unter einer CC-BY-NC-SA Lizenz.
+ Diese Datei darf weiter als Beispiel genutzt werden.
