--- a/Bruecknn/Hausaufgabe03.Rmd
+++ b/Bruecknn/Hausaufgabe03.Rmd
@@ -77,6 +77,9 @@ Ergänzen Sie folgende Zeile mit Inline R-code, sodass der Satz korrekt und voll
 
 Die Summe von 98545455678767 und 567886538546532323 ist: code_hier .
 
+Die Summe von 98545455678767 und 567886538546532323 ist: `r 98545455678767 + 567886538546532323`.
+
+
 # Normaler R-Code 
 Es ist natürlich auch möglich R-Code zu schreiben, ohne ihn in (R)Markdown einzubetten. Dazu geht die Aufgabe weiter mit `hausaufgabe03.R` weiter. Sie sollten die Datei auch in Ihren Ordner kopieren und einen Commit machen, bevor Sie die Kopie weiter anpassen.
 
