--- a/hausaufgabe07.Rmd
+++ b/hausaufgabe07.Rmd
@@ -5,7 +5,7 @@
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
 # Das sollte langsam automatisch sein...
-1. Kopieren Sie diese Datei in Ihren Ordner (das können Sie innerhalb RStudio machen oder mit Explorer/Finder/usw.) und öffnen Sie die Kopie. Ab diesem Punkt arbeiten Sie mit der Kopie.
+1. Kopieren Sie diese Datei in Ihren Ordner (das können Sie innerhalb RStudio machen oder mit Explorer/Finder/usw.) und öffnen Sie die Kopie. Ab diesem Punkt arbeiten Sie mit der Kopie. Die Kopie bitte `hausaufgabe07.Rmd` nennen und nicht `Kopie...`
 3. Sie sehen jetzt im Git-Tab, dass der neue Ordner als unbekannt (mit gelbem Fragezeichnen) da steht. Geben Sie Git Bescheid, dass Sie die Änderungen im Ordner verfolgen möchten (auf Stage klicken). Die neue Datei steht automatisch da.
 4. Machen Sie ein Commit mit den bisherigen Änderungen (schreiben Sie eine sinnvolle Message dazu -- sinnvoll bedeutet nicht unbedingt lang) und danach einen Push.
 5. Ersetzen Sie meinen Namen oben mit Ihrem. Klicken auf Stage, um die Änderung zu merken.
@@ -13,6 +13,147 @@ Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden
 7. Sie sehen jetzt, dass es zwei Symbol in der Status-Spalte gibt, eins für den Zustand im *Staging Area* (auch als *Index* bekannt), eins für den Zustand im Vergleich zum Staging Area. Sie haben die Datei modifiziert, eine Änderung in das Staging Area aufgenommen, und danach weitere Änderungen gemacht. Nur Änderungen im Staging Area werden in den Commit aufgenommen.
 8. Stellen Sie die letzten Änderungen auch ins Staging Area und machen Sie einen Commit (immer mit sinnvoller Message!).
 9. Vergessen Sie nicht am Ende, die Lizenz ggf. zu ändern!
+
+
+# Verteilung von Noten
+An der Uni Marburg nutzen wir eine 15 Punkte als Benotungskala (*Notenpunkte*). Wir nehmen an, dass der Mittelwert 8 NP (=3 im üblichen 1-5 System, was eigentlich einem durschnittlichen Verständnis des Stoffes entsprechen soll) ist. Wie sieht dann die Verteilung der Noten aus? Wir müssen uns noch überlegen, was eine sinnvolle Standardabweichung für die Noten wäre. Vielleicht ist am leichtesten, wenn wir einfach ein paar ausprobieren und plotten. Wir fangen mit $\sigma = 3,4,5$ an. Das entspricht 1, 1.5, 2 Noten auf der 1-5 Skala.
+
+```{r}
+noten <- 1:15
+mu <- 8
+drei <- dnorm(noten,mean=mu,sd=3)
+vier <- dnorm(noten,mean=mu,sd=4)
+fuenf <- dnorm(noten,mean=mu,sd=5)
+
+noten.dist <- data.frame(Notenpunkte=noten,drei,vier,fuenf)
+noten.dist
+```
+
+Die Daten sind im sog. **wide format** (*breiten Format*), weil die Verschiedenenstufen einer Variable (hier: simulierte Standabweichung) "breit", d.h. über mehrere Spalten hinweg, dargestellt werden. Obwohl viele es als "natürlich" betrachten, ist dieses Format in R nicht bevorzugt. Unter anderem haben wir hier mehr Beobachtungen pro Zeile, was aus der Perspektive der Statistik ein bisschen durcheinander ist. R (und die Mathematik, die R Ihnen abnimmt) bevorzugt sog. **long format** (*langes Format*), wo es eine Beobachtung pro Zeile gibt. In diesem Format gibt es dann bei unsrem Beispiel eine weitere Spalte "Standardabweichung" und die drei verschiedenen beobachteten Messwerte werden zusammen in einer Spalte gepackt. Das Paket `reshape2` bietet ein paar Hilfsfunktionen an, die das Umformatieren viel leichter machen. (Sie müssen jetzt das Paket installieren, sonst funktioniert der nächste Block nicht!) (Es gibt auch das Paket `reshape` vom selben Autor, das auch ähnliches macht. `reshape2` hat ein paar Verbesserungen eingeführt, die nicht ganz rückwärtskompatibel sind.)
+
+Die Funktion heißt `melt()` (*schmelzen*) aus der Analogie zu Schmieden, wo die Daten (der Rohstoff) in eine schmiedbare bzw. flüßige Form gebracht werden. Aus dem Long-Format kann man danach die Daten in andere Formate mit `cast()` (*gießen*) konvertieren. 
+
+```{r}
+library(reshape2)
+# value.name is the name of the new column with the values that were previously spread out over several columns
+# variable.name is the name of the new column with the old column names 
+melt(noten.dist,id.vars="Notenpunkte",value.name="P",variable.name="Standardabweichung")
+```
+
+Wir müssenden Output von `melt()` natürlich einer Variable zuweisen. Wir können die Ausgangsvaribel "überschreiben":
+
+```{r}
+noten.dist <- melt(noten.dist,id.vars="Notenpunkte",value.name="P",variable.name="Standardabweichung")
+```
+
+Das funktioniert, weil alles rechts von `<-` zuerst gemacht wird. *Die Zuweisung finden erst nach der Evaluation der rechten Seite statt!* Jetzt können wir alle drei Verteilungen mit einem `ggplot`-Befehl plotten. 
+
+```{r}
+library(ggplot2)
+# we use geom_line() because dnorm() already gave us the densities! 
+# we onle use geom_density() when ggplot should calculate the density for u
+ggplot(data=noten.dist,aes(x=Notenpunkte,y=P,color=Standardabweichung)) + geom_line() + scale_x_continuous(limits=c(0,16))
+```
+Ich habe die Grenzen der Grafik ein bisschen breiter gestellt, sodass man die Endpunkte klar sieht und Sie auch einen weiteren `ggplot`-Befehl kennen lernen. Überlegung: Welche Verteilung sieht am fairsten aus? Warum?
+
+Wir können das konkreter machen: wie viele Studenten bekommen bei den jeweiligen Verteilungen eine 1 (zumindest 13 NP)? Für die Verteilung mit $\sigma = 3$ sieht die Berechnung mit R so aus:
+```{r}
+pnorm(13,mean=mu,sd=3,lower.tail=FALSE)
+```
+Oder vielleicht interessiert uns, wie viele Durchfallen (< 5NP):
+```{r}
+pnorm(5,mean=mu,sd=3)
+```
+
+Wenn wir das für alle drei Gruppen wiederholen möchten, ist es ziemlich ärgerlich, wenn jede Gruppe einzel eingeben müssen. Dafür können wir eine **`for`-Schleife** nutzen:
+
+```{r}
+for(s in c(3,4,5) ){
+  durchfall <- pnorm(5,mean=mu,sd=s)
+  output <- paste("Bei einer Standabweichung von",s, "fallen",durchfall*100,"% durch.")
+  print(output)
+}
+```
+
+Aber wir hoffen alle, dass wir doch eine gute Note bekommen. Fügen Sie einen Code-Block hier ein, der das gleiche macht aber mit "ausgezeichneten" Noten (=1 bzw. >= 13) macht. (Bei evtl. Copy-Paste nicht vergessen, "fallen...durch" durch etwas Passendes zu ersetzen!)  
+
+code_block_hier
+
+Wie steht die Anzahl guter Noten in Beziehung zur Anzahl schlechter Noten aus? 
+
+antwort_hier
+
+Warum?
+
+antwort_hier
+
+## Kurtosis und Schiefe
+Kurtosis (im Deutschen auch *Wölbung*) ist ein Maß dafür, wie spitzig eine Verteilung ist. Die Normalverteilung wird nie zu extrem spitzig -- der Gipfel bleibt immer schön rund, obwohl er manchmal eng wird. Andere Verteilungen (z.B. die Laplace-Verteilnung ) haben Gipfel, die nicht rund sind.   
+
+Schiefe (*skewness*) beschriebt die (A)Symmetrie einer Verteilung. Eine Verteilung ist *linksschief*, wenn die linke Seite "breiter" ist, d.h., wenn sich der "Gipfel" auf der rechten Seite befindet.  Eine Verteilung ist *rechtsschief*, wenn die rechte Seite "breiter" ist, d.h., wenn sich der "Gipfel" auf der linken Seite befindet 
+
+Die Richtung der Schiefe ist insoweit die Richtung, wo der Schwanz dicker bzw. größer ist.
+
+Die Verteilung von Noten ist oft schief mit mehr guten Noten. Ist die Verteilung rechts- oder linksschief?
+
+antwort_hier
+
+Vielleicht hilft folgende Grafik mit der Visuelliserung:
+```{r}
+library(sn)
+qplot(x=1:15,y=dsn(1:15, xi=c(12), omega=1, alpha=-3, log=FALSE),geom="line",xlab="Notenpunkte",ylab="P")
+```
+
+## Von Perzentilen auf Häufikgeiten
+Wir können die Perzentile in Häufigkeiten übersezten. Nehmen wir an, dass es 50 Studenten in einem Kurs sind und dass die Noten wie oben normalverteilt sind. Dann können wir unsrem Data.Frame eine weitere Spalte hinzufügen:
+```{r}
+n <- 50
+noten.dist$Anzahl <- noten.dist$P * n
+noten.dist
+```
+
+Jetzt können wir die absoluten Häufigkeiten auch plotten:
+
+code_block_hier
+
+Jetzt können Sie ein paar Fragen über die Verteilung konkret beantworten:
+
+1. Wie viele Studenten bekommen zwischen 7 und 9 NP bei einer Standardabweichung von 3?
+
+    `r (pnorm(9,mean=mu,sd=3) - pnorm(7,mean=mu,sd=3) ) * n` Studenten bekommen zwischen 7 und 9 Notenpunkten. 
+    
+    Wichtig: bei Wahrscheinlichkeits- und Häufigkeitsverteilung ist der linke Rand inklusiv aber der rechte Rand exklusiv! Das heißt, wir zählen hiermit die Leute, die bis auf 9 NP bekommen haben aber nicht die, die tatsächlich 9 NP bekommen haben!
+
+2. Wie viele Studenten bekommen zumindest 10 NP?
+
+    `code_hier` Studenten bekommen zumindest 10 Notenpunkte.
+
+3. Wie viele Studenten bekommen weniger als 10 NP?
+
+    `code_hier` Studenten bekommen weniger als 10 Notenpunkte.
+
+4. Wie viele Studenten bekommen weniger als 8 NP?
+
+    `code_hier` Studenten bekommen weniger als 8 Notenpunkte.
+
+
+(Die Einrückung mit 4 Leerschlägen ist die Syntax für mehrere Absatz pro Punkt auf der Liste.)
+
+## Von Noten zu Perzentilen -- ich möchte mich den anderen überlegen fühlen!
+
+## Zum Überlegen
+Gibt es einen Grund, weshalb die Noten normalverteilt sein sollten? Warum ist das die übliche Annahme?
+
+# Andere Verteilungen
+Die Normalverteilung ist nicht die einzige wichtige Verteilung. Manche Verteilungen entstehen ganz natürlich aus dem Vergleich anderer Verteilungen und werden zur Berechnung von Teststatistiken genutzt ($F$,$\chi^2$, $t$). Diese Verteilungen werden wir besprechen, wenn wir den entsprechenden Test lernen. 
+
+
+## Binomialverteilung 
+
+## Pareto Verteilung
+
+## Poisson Verteilung
+
 
 # Lizenz
 Dieses Werk ist lizenziert unter einer CC-BY-NC-SA Lizenz.
