--- a/hausaufgabe07.Rmd
+++ b/hausaufgabe07.Rmd
@@ -94,11 +94,11 @@ for(s in c(13,14,15)){
 
 Wie steht die Anzahl guter Noten in Beziehung zur Anzahl schlechter Noten? 
 
-Der Anteil derjeniger, die bestehen ist deutlich höher, als derer, die durchfallen. Prozentual steigt jedoch nicht die Wahrscheinlichkeit mit 15 Punkten zu bestehen, sondern - in den ausgewerteten Fällen - ist es am wahrscheinlichsten (64,97%), dass mit 13 Punkten bestanden wird. Es gibt mehr gute Noten, der Großteil wird die Prüfung bestehen.
+Der Anteil derjeniger, die bestehen ist deutlich höher, als derer, die durchfallen.  Es gibt mehr gute Noten, schlechte Noten sind seltener.
 
 Warum?
 
-antwort_hier
+Der untersuchte Bereich ist größer für schlechte Noten. Ausgehend von einer Normalverteilung würden die Ergebnisse anders ausfallen und im Vergleich zur Mitte weniger Werte aufweisen als diese.
 
 ## Kurtosis und Schiefe
 Kurtosis (im Deutschen auch *Wölbung*) ist ein Maß dafür, wie spitz eine Verteilung ist. Die Normalverteilung wird nie zu extrem spitz -- der Gipfel bleibt immer schön rund, obwohl er manchmal eng wird. Andere Verteilungen (z.B. die Laplace-Verteilung ) haben Gipfel, die nicht rund sind.   
@@ -125,8 +125,9 @@ noten.dist
 ```
 
 Jetzt können wir die absoluten Häufigkeiten auch plotten:
-
-code_block_hier
+```{r}
+ggplot(data=noten.dist$Anzahl,aes(x=Notenpunkte,y=P,color=Standardabweichung)) + geom_line() + scale_x_continuous(limits=c(0,16))
+```
 
 Beantworten Sie ein paar Fragen über die Verteilung, indem Sie den passenden R-Code einsetzen:
 
@@ -138,17 +139,16 @@ Beantworten Sie ein paar Fragen über die Verteilung, indem Sie den passenden R-
 
 2. Wie viele Studenten bekommen zumindest 10 NP?
 
-    `r pnorm(10,mean=mu,sd=3) * n` Studenten bekommen zumindest 10 Notenpunkte.
+    `r (pnorm(16,mean=mu,sd=3) - pnorm(10,mean=mu,sd=3) ) * n` Studenten bekommen zumindest 10 Notenpunkte.` 
 
 3. Wie viele Studenten bekommen weniger als 10 NP?
 
-    `r pnorm(9,sd=3,mean=mu) * n` Studenten bekommen weniger als 10 Notenpunkte.
-
+    `r pnorm(10,mean=mu,sd=3)` Studenten bekommen weniger als 10 Notenpunkte.
+    
 4. Wie viele Studenten bekommen weniger als 8 NP?
 
-    `r pnorm(7,sd=3,mean=mu) * n` Studenten bekommen weniger als 8 Notenpunkte.
-
-
+    `r pnorm(8,mean=mu,sd=3)` Studenten bekommen weniger als 8 Notenpunkte.
+    
 (Die Einrückung mit 4 Leerschlägen ist die Syntax für mehrere Absätze pro Punkt auf der Liste.)
 
 ## Von Noten zu Perzentilen -- ich möchte mich den anderen überlegen fühlen!
@@ -163,7 +163,7 @@ Um in dem besten 1% abzuschließen, muss man zumindest `r qnorm(.99,mean=mu,sd=3
 ## 
 Bei der Überprüfung der Lehrqualität scheint es der Verwaltung, dass ein gewisser Dozent andere Noten als andere Dozenten vergibt. Es wird entschieden, dass der Notenspiegel bei den Teilnehmern in einem von seinen Kursen getestet wird, um zu schauen, ob er sich von signifikant von der idealisierten Notenverteilung ($\mu=8,\sigma=3$) unterscheidet. Um zu zeigen, dass Gott $\alpha=0.06$ so viel liebt wie $\alpha=0.05$ `r citep("10.1037/0003-066X.44.10.1276")`, setzt die Verwaltung das Signikanzniveau auf 0.06. 
 
-Der kritische Wert für einen einseitigen $z$-Test ist `r qnorm(0.94)`.
+Der kritische Wert für einen einseitigen $z$-Test ist `r qnorm(0.94)`. 
 
 Die kritischen Werte für einen zweiseitigen $z$-Test sind $\pm$`r qnorm(0.97)`.
 
@@ -172,15 +172,17 @@ Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen 
 
 In einem kleinen Seminar mit 7 Studenten beträgt der Durchschnittswert 10. Unterscheidet sich der Notenspiegel von dem idealen? Berechnen Sie den $z$-Test:
 
-code_hier
-
-Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
+```{r}
+z <- sqrt{7} \left(\frac{10-8}{10} \right)
+```
+## Das ist ein **insignifikanter** Unterschied. 
 
 In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
 
-code_hier
-
-Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
+```{r}
+z <- sqrt{50} \left(\frac{10-8}{10}\right)
+```
+## Das ist ein **signifikanter** Unterschied. 
 
 Ist die Benotung vom Dozenten weniger als ideal? 
 
@@ -191,17 +193,21 @@ In einem mittelgroßen Seminar mit 20 Studenten beträgt der Durchschnittswert 7
 
 Berechnen Sie den $z$-Test:
 
-code_hier
+```{r}
+z <- sqrt{20} \left(\frac{7-8}{7}\right)
+```
 
-Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
+## Das ist ein **insignifikanter** Unterschied. 
 
 Später ergibt sich, dass es eigentlich 25 Studenten im Kurs gab. (Der Dozent hat "einen Tippfehler" gemacht, als er seine Teilnehmerzahl per Mail an die Verwaltung geschickt hat.) Der Durchschnittswert bleibt -- behauptet der Dozent -- immer noch bei 7. Er behauptet weiterhin, dass das wunderbar nah am Erwartungswert (8) ist, und dass man ihn in Ruhe lassen sollte. Ist er zu streng?
 
 Berechnen Sie den $z$-Test:
 
-code_hier
+```{r}
+z <- sqrt{25} \left(\frac{7-8}{7}\right)
+```
 
-Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
+## Das ist ein **signifikanter** Unterschied.
 
 ## Zum Überlegen
 Gibt es einen Grund, weshalb die Noten normal verteilt sein sollten? Warum ist das die übliche Annahme?
