--- a/hausaufgabe07.Rmd
+++ b/hausaufgabe07.Rmd
@@ -173,14 +173,14 @@ Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen 
 In einem kleinen Seminar mit 7 Studenten beträgt der Durchschnittswert 10. Unterscheidet sich der Notenspiegel von dem idealen? Berechnen Sie den $z$-Test:
 
 ```{r}
-z <- sqrt{7} \left(\frac{10-8}{10} \right)
+z <- sqrt(7) \left(\frac{10-8}{10} \right)
 ```
 ## Das ist ein **insignifikanter** Unterschied. 
 
 In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
 
 ```{r}
-z <- sqrt{50} \left(\frac{10-8}{10}\right)
+z <- sqrt(50) \left(\frac{10-8}{10}\right)
 ```
 ## Das ist ein **signifikanter** Unterschied. 
 
@@ -194,7 +194,7 @@ In einem mittelgroßen Seminar mit 20 Studenten beträgt der Durchschnittswert 7
 Berechnen Sie den $z$-Test:
 
 ```{r}
-z <- sqrt{20} \left(\frac{7-8}{7}\right)
+z <- sqrt(20) \left(\frac{7-8}{7}\right)
 ```
 
 ## Das ist ein **insignifikanter** Unterschied. 
@@ -204,7 +204,7 @@ Später ergibt sich, dass es eigentlich 25 Studenten im Kurs gab. (Der Dozent ha
 Berechnen Sie den $z$-Test:
 
 ```{r}
-z <- sqrt{25} \left(\frac{7-8}{7}\right)
+z <- sqrt(25) \left(\frac{7-8}{7}\right)
 ```
 
 ## Das ist ein **signifikanter** Unterschied.
