--- a/hausaufgabe07.Rmd
+++ b/hausaufgabe07.Rmd
@@ -173,11 +173,11 @@ Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen 
 In einem kleinen Seminar mit 7 Studenten beträgt der Durchschnittswert 10. Unterscheidet sich der Notenspiegel von dem idealen? Berechnen Sie den $z$-Test:
 
 ```{r}
-z <- sqrt(7) \left(\frac{10-8}{10} \right)
+z <- sqrt(7) \left(\frac{10-8}{10}\right)
 ```
-## Das ist ein **insignifikanter** Unterschied. 
+# Das ist ein **insignifikanter** Unterschied. 
 
-In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
+# In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
 
 ```{r}
 z <- sqrt(50) \left(\frac{10-8}{10}\right)
