--- a/Seidlerc/hausaufgabe07.Rmd
+++ b/Seidlerc/hausaufgabe07.Rmd
@@ -172,17 +172,13 @@ Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen 
 
 In einem kleinen Seminar mit 7 Studenten beträgt der Durchschnittswert 10. Unterscheidet sich der Notenspiegel von dem idealen? Berechnen Sie den $z$-Test:
 
-```{r}
-z <- sqrt(7) \left(\frac{10 - 8 }{10}\right)
-```
+`r z <- sqrt(7) \left(\frac{10 - 8 }{10}\right)`
 
 ## Das ist ein **insignifikanter** Unterschied. 
 
 In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
 
-```{r}
-z <- sqrt(50) \left(\frac{10-8}{10}\right)
-```
+`r z <- sqrt(50) \left(\frac{10-8}{10}\right)`
 
 # Das ist ein **signifikanter** Unterschied. 
 
@@ -195,9 +191,8 @@ In einem mittelgroßen Seminar mit 20 Studenten beträgt der Durchschnittswert 7
 
 Berechnen Sie den $z$-Test:
 
-```{r}
-z <- sqrt(20) \left(\frac{7-8}{7}\right)
-```
+`r z <- sqrt(20) \left(\frac{7-8}{7}\right)`
+
 
 # Das ist ein **insignifikanter** Unterschied. 
 
@@ -205,9 +200,7 @@ Später ergibt sich, dass es eigentlich 25 Studenten im Kurs gab. (Der Dozent ha
 
 Berechnen Sie den $z$-Test:
 
-```{r}
-z <- sqrt(25) \left(\frac{7-8}{7}\right)
-```
+`r z <- sqrt(25) \left(\frac{7-8}{7}\right)`
 
 # Das ist ein **signifikanter** Unterschied.
 
